--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -59,13 +59,16 @@
             font-size: 52px;
             width: 98%;
             text-align: center;
+
             /*padding: 0.5em;*/
 
         }
         h4 {
             font-size: 40px;
             /*width: 98%;*/
-            text-align: left;
+            /*margin-top: -2%;*/
+            text-align: center;
+
             padding: 5em;
 
         }
@@ -76,6 +79,25 @@
             padding: 5em;
 
         }
+        h6 {
+            font-size: 20px;
+            /*width: 98%;*/
+            text-align: center;
+            padding: 5em;
+            margin-top: -20%;
+            margin-left: 5%;
+
+        }
+        h7 {
+            font-size: 20px;
+            /*width: 98%;*/
+            text-align: right;
+            padding: 5em;
+            margin-top: -10%;
+            margin-left: 52%;
+
+        }
+
 
         h2 {
             font-family: Verdana, sans-serif;
@@ -99,6 +121,23 @@
             font-size: 18px;
             text-align: center;
         }
+
+        .button {
+            background-color: #4CAF50; /* Green */
+            border: none;
+            color: white;
+            text-align: left;
+            text-decoration: none;
+            display: inline-block;
+            float:left;
+            font-size: 12px;
+            margin: 4px 2px;
+            cursor: pointer;
+            margin-left: 30%;
+            margin-top: -7%;
+        }
+
+        .button2 {padding: 8px 24px;}
 
         code {
             color: #3d85c6;
@@ -296,9 +335,15 @@
 <form th:action="@{/homepage}" method="get">
     <img src="https://www.maxpixel.net/static/photo/1x/Clock-Rolex-Business-Pen-Work-Style-Watches-3518474.jpg" class="img1"/>
     <h4>Watches for You</h4>
-   
+    <br>
+    <br>
+    <h6>High-precision watches that connect people.</h6>
+    <br>
+    <br>
+    <button class="button button2">Shop now</button>
     <img src="https://www.maxpixel.net/static/photo/1x/Male-Watch-Luxury-Accessories-To-Watch-Rolex-1327169.jpg" class="img2" />
     <h5>Choose your style</h5>
+    <h7>Durable, hight quality, professional</h7>
 
 </form>
 </body>
