--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -123,7 +123,7 @@
         }
 
         .button {
-            background-color: #4CAF50; /* Green */
+            background-color: #1F51FF;
             border: none;
             color: white;
             text-align: left;
