--- a/src/main/resources/templates/listProducts.html
+++ b/src/main/resources/templates/listProducts.html
@@ -1,96 +1,372 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="index.css">
-	<style>@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;800;900&family=Roboto&display=swap');
+    <!--	<link rel="stylesheet" href="css/style.css" />-->
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+    <style>
+        * {
+            box-sizing: border-box;
+            font-family: helvetica;
+        }
 
-	body {
-		font-family: 'Raleway', sans-serif;
-	}
+        /* pattern adapted from http://lea.verou.me/css3patterns/ */
 
-	#cart {
-		margin:0;
-		padding:0;
+        .b-green, .b-green:before {
+            color: white;
+            padding: 9px 12px;
+            text-align: center;
 
-	}
+            background: rgba(73,155,234,1);
+            background: -moz-linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+            background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(73,155,234,1)), color-stop(100%, rgba(26,188,156,1)));
+            background: -webkit-linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+            background: -o-linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+            background: -ms-linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+            background: linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#1abc9c', GradientType=1 );
+        }
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        section {
+            background-color: rgba(255,255,255);
+            margin: 3% 3%;
+            padding: 1em;
+            width: 44%;
+            border: #FFFFFF 3px solid;
+        }
 
-	ul{
-		margin:0;
-		padding:0;
-		overflow:hidden;
-		text-align:center;
-		background-color: #333333;
-	}
+        img {
+            max-width: 100%;
+            margin: 0% auto 0% 0%;
+        }
+        .button {
+            background-color: #1F51FF;
+            border: none;
+            color: white;
+            text-align: left;
+            text-decoration: none;
+            display: inline-block;
+            float:left;
+            font-size: 14px;
+            margin: 4px 2px;
+            cursor: pointer;
+            margin-left: 39%;
+            margin-top: 0%;
+        }
 
-	li{
-		display:inline;
-		color:white;
-		padding:10px;
-		text-decoration:none;
-	}
+        .button2 {padding: 8px 24px;}
 
-	img{
-		padding:30px 10px 0px 10px;
-	}
 
-	h1 {
-		text-align: center;
-		font-family: 'roboto', sans-serif;
-		font-weight: 900;
-	}
+        h1 {
+            font-size: 47px;
+            width: 98%;
+            text-align: center;
+            padding: 0.5em;
+            margin-top: 2%;
 
-	h2 {
-		font-family: 'roboto', sans-serif;
-		padding-left: 15px;
-	}
+        }
 
-	h3 {
-		font-weight: 800;
-		padding-left: 18px;
-	}
+        h2 {
+            font-family: Verdana, sans-serif;
+            font-size: 25px;
+            color: white;
+            padding: 1em;
+            text-align: center;
+            background-color: #3477ba;
+        }
 
-	button {
-		margin: 0px 20px;
-	}
+        h3 {
+            font-size: 33px;
+            width: 98%;
+            text-align: center;
+            padding: 0.5em;
 
-	p {
-		font-family: 'Raleway', sans-serif;
-		font-size: 13px;
-		padding: 0px 20px;
-	}
+        }
 
-	table {
-		margin-left: auto;
-		margin-right: auto;
-	}</style>
-	<title> Best Online Shop </title>
+        p {
+            padding: 0.5em;
+            font-size: 25px;
+            text-align: center;
+            margin-top: -2%;
+        }
+
+        code {
+            color: #3d85c6;
+        }
+        *, *::before, *::after {
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: sans-serif;
+            font-size: 1em;
+            color: #333;
+        }
+
+        h1 {
+            font-size: 5em;
+        }
+
+        em {
+            font-style: normal;
+        }
+
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+
+        /* Layout */
+        .s-layout {
+            display: flex;
+            width: 80%;
+            min-height: 100vh;
+        }
+
+        .s-layout__content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex: 1;
+        }
+
+        /* Sidebar */
+        .s-sidebar__trigger {
+            z-index: 2;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 4em;
+            background: #192b3c;
+        }
+
+        .s-sidebar__trigger > i {
+            display: inline-block;
+            margin: 1.5em 0 0 1.5em;
+            color: #f07ab0;
+        }
+
+        .s-sidebar__nav {
+            position: fixed;
+            top: 0;
+            left: -15em;
+            overflow: hidden;
+            transition: all .3s ease-in;
+            width: 15em;
+            height: 100%;
+            background: #243e56;
+            color: rgba(255, 255, 255, 255);
+        }
+
+        .s-sidebar__nav:hover,
+        .s-sidebar__nav:focus,
+        .s-sidebar__trigger:focus + .s-sidebar__nav,
+        .s-sidebar__trigger:hover + .s-sidebar__nav {
+            left: 0;
+        }
+
+        .s-sidebar__nav ul {
+            position: absolute;
+            top: 4em;
+            left: 0;
+            margin: 0;
+            padding: 0;
+            width: 15em;
+        }
+
+        .s-sidebar__nav ul li {
+            width: 100%;
+        }
+
+        .s-sidebar__nav-link {
+            position: relative;
+            display: inline-block;
+            width: 100%;
+            height: 4em;
+        }
+
+        .s-sidebar__nav-link em {
+            position: absolute;
+            top: 50%;
+            left: 4em;
+            transform: translateY(-50%);
+        }
+
+        .s-sidebar__nav-link:hover {
+            background: #4d6276;
+        }
+
+        .s-sidebar__nav-link > i {
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: inline-block;
+            width: 4em;
+            height: 4em;
+        }
+
+        .s-sidebar__nav-link > i::before {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        /* Mobile First */
+        @media (min-width: 42em) {
+            .s-layout__content {
+                margin-left: 4em;
+            }
+
+            /* Sidebar */
+            .s-sidebar__trigger {
+                width: 4em;
+            }
+
+            .s-sidebar__nav {
+                width: 4em;
+                left: 0;
+            }
+
+            .s-sidebar__nav:hover,
+            .s-sidebar__nav:focus,
+            .s-sidebar__trigger:hover + .s-sidebar__nav,
+            .s-sidebar__trigger:focus + .s-sidebar__nav {
+                width: 15em;
+            }
+        }
+
+        @media (min-width: 68em) {
+            .s-layout__content {
+                margin-left: 15em;
+            }
+
+            /* Sidebar */
+            .s-sidebar__trigger {
+                display: none
+            }
+
+            .s-sidebar__nav {
+                width: 15em;
+            }
+
+            .s-sidebar__nav ul {
+                top: 1.3em;
+            }
+        }
+
+
+    </style>
+
 </head>
 
 <body>
-<h1>My Boutique</h1>
-<ul>
-	<li>Shirts</li>
-	<li>Pants</li>
-	<li>Footwear</li>
-	<li>Accessories</li>
-</ul>
-
-<table>
-	<tr>
-		<td>
-			<img src="https://cdn.pixabay.com/photo/2018/03/19/18/20/business-3240767__340.jpg" alt="" width="250" height="200">
-			<h3>Price: $0.00</h3>
-			<button>Buy Now</button></td>
-		<td>
-			<img src="https://cdn.pixabay.com/photo/2018/06/04/22/55/books-3454399__340.jpg" alt="" width="250" height="200">
-			<h3>Price: $0.00</h3>
-			<button>Buy Now</button></td>
-		<td>
-			<img src="https://cdn.pixabay.com/photo/2018/06/04/22/53/books-3454380__340.jpg" alt="" width="250" height="200">
-			<h3>Price:$0.00</h3>
-			<button>Buy Now</button></td>
-	</tr>
-</table>
-
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed"
+                    data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                    aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span> <span
+                    class="icon-bar"></span> <span class="icon-bar"></span> <span
+                    class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#" th:href="@{/login}">Login</a>
+            <a class="navbar-brand" href="#" th:href="@{/register}">Register</a>
+            <a class="navbar-brand" href="#" th:href="@{/users}">Users</a>
+            <a class="navbar-brand" href="#" th:href="@{/user_page}">Get info</a>
+            <a class="navbar-brand" href="#" th:href="@{/logout}">Log out</a>
+        </div>
+    </div>
+</nav>
+<br>
+<br>
+<br>
+<br>
+<br>
+<b><h1> Choose your Style</h1></b>
+<div class="container">
+    <section>
+        <img src="https://www.maxpixel.net/static/photo/1x/Wristwatch-Rolex-Watches-Watch-Luxury-Watch-Class-4696644.jpg" class="img1"/>
+        <br>
+        <br>
+        <br>
+        <p>Watch 1 </p>
+        <br>
+        <div class="text-center">
+            <button class="button button2">Shop now</button>
+        </div>
+        <!--    <a href="#" class="btn blue">Blue Button</a>-->
+    </section>
+    <section>
+        <img src="https://www.maxpixel.net/static/photo/1x/Steel-Metal-Watch-Dial-Time-Swiss-Luxury-Rolex-2171960.jpg" class="img1"/>
+        <br>
+        <br>
+        <br>
+        <p>Watch 2</p>
+        <br>
+        <div class="text-center">
+            <button class="button button2">Shop now</button>
+        </div>
+    </section>
+    <section>
+        <img src="https://www.maxpixel.net/static/photo/1x/Luxury-Watch-Class-Watches-Rolex-Watch-Wristwatch-4874320.jpg" class="img1"/>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>Watch 3</p>
+        <br>
+        <div class="text-center">
+            <button class="button button2">Shop now</button>
+        </div>
+    </section>
+    <section>
+        <img src="https://www.maxpixel.net/static/photo/1x/Rolex-Watches-Watch-Luxury-Watch-Wristwatch-Class-4551369.jpg" class="img1"/>
+        <br>
+        <br>
+        <br>
+        <p>Watch 4</p>
+        <br>
+        <div class="text-center">
+            <button class="button button2">Shop now</button>
+        </div>
+    </section>
+    <section>
+        <img src="https://www.maxpixel.net/static/photo/1x/Watch-Rolex-Datejust-2654530.jpg" class="img1"/>
+        <br>
+        <br>
+        <br>
+        <p>Watch 5</p>
+        <br>
+        <div class="text-center">
+            <button class="button button2">Shop now</button>
+        </div>
+    </section>
+    <section>
+        <img src="https://www.maxpixel.net/static/photo/1x/Luxury-Rolex-Swiss-Dial-Metal-Steel-Time-Watch-2171961.jpg" class="img1"/>
+        <br>
+        <br>
+        <br>
+        <p>Watch 6</p>
+        <br>
+        <div class="text-center">
+            <button class="button button2">Shop now</button>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+    </section>
+</div>
 </body>
+
 </html>
