--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -130,7 +130,7 @@
             text-decoration: none;
             display: inline-block;
             float:left;
-            font-size: 12px;
+            font-size: 14px;
             margin: 4px 2px;
             cursor: pointer;
             margin-left: 30%;
@@ -340,7 +340,7 @@
     <h6>High-precision watches that connect people.</h6>
     <br>
     <br>
-    <button class="button button2">Shop now</button>
+    <a href="#" th:href="@{/products}" class="button button2">Shop now</a>
     <img src="https://www.maxpixel.net/static/photo/1x/Male-Watch-Luxury-Accessories-To-Watch-Rolex-1327169.jpg" class="img2" />
     <h5>Choose your style</h5>
     <h7>Durable, hight quality, professional</h7>
