--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -66,7 +66,7 @@
         h4 {
             font-size: 40px;
             /*width: 98%;*/
-            /*margin-top: -2%;*/
+            margin-top: -2%;
             text-align: center;
 
             padding: 5em;
@@ -335,7 +335,6 @@
 <form th:action="@{/homepage}" method="get">
     <img src="https://www.maxpixel.net/static/photo/1x/Clock-Rolex-Business-Pen-Work-Style-Watches-3518474.jpg" class="img1"/>
     <h4>Watches for You</h4>
-    <br>
     <br>
     <h6>High-precision watches that connect people.</h6>
     <br>
