--- a/src/main/resources/templates/watch_detail.html
+++ b/src/main/resources/templates/watch_detail.html
@@ -35,10 +35,10 @@
         }
         section {
             background-color: rgba(255,255,255);
-            margin: 2% 1%;
+            margin: 3% 3%;
             padding: 1em;
-            width: 40%;
-            border: #c1c4c7 3px solid;
+            width: 44%;
+            border: #FFFFFF 3px solid;
         }
 
         img {
@@ -47,7 +47,7 @@
         }
 
         h1 {
-            font-size: 47px;
+            font-size: 40px;
             width: 98%;
             text-align: center;
             padding: 0.5em;
@@ -57,18 +57,19 @@
         h2 {
             font-family: Verdana, sans-serif;
             font-size: 25px;
-            color: white;
+            color: black;
             padding: 1em;
             text-align: center;
             background-color: #3477ba;
         }
 
-        h3 {
-            font-size: 33px;
-            width: 98%;
-            text-align: center;
-            padding: 0.5em;
-
+        h4 {
+            font-family: Times New Roman;
+            font-size: 25px;
+            color: black;
+            padding: 1em;
+            /*text-align: left;*/
+            background-color: #FFFFFF;
         }
 
         p {
@@ -90,6 +91,23 @@
             color: #333;
         }
 
+        .button {
+            background-color: #1F51FF;
+            border: none;
+            color: white;
+            text-align: left;
+            text-decoration: none;
+            display: inline-block;
+            float:left;
+            font-size: 14px;
+            margin: 4px 2px;
+            cursor: pointer;
+            margin-left: 39%;
+            margin-top: 0%;
+        }
+
+        .button2 {padding: 8px 24px;}
+
         h1 {
             font-size: 5em;
         }
@@ -108,6 +126,10 @@
             display: flex;
             width: 80%;
             min-height: 100vh;
+        }
+        .form-q {
+            text-align: center;
+            font-size: 18px;
         }
 
         .s-layout__content {
@@ -270,23 +292,42 @@
 <br>
 <br>
 <!--<form th:action="@{/watch_detail}" method="get" th:object="${product}">-->
-    <b><h1>Watch1</h1></b>
+    <b><h1> <td th:text="${product.product_name}">Name</h1></b>
 <div class="container">
     <br>
     <br>
     <section>
-        <br>
-        <td th:text="${product.product_name}">Name</td>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <th:block th:switch="${product.product_name}">
+            <div th:case="'watch1'">
+                <img src="https://www.maxpixel.net/static/photo/1x/Wristwatch-Rolex-Watches-Watch-Luxury-Watch-Class-4696644.jpg" class="img1"/>
+                <!-- print object is not active -->
+            </div>
+            <div th:case="'watch2'">
+                <img src="https://www.maxpixel.net/static/photo/1x/Steel-Metal-Watch-Dial-Time-Swiss-Luxury-Rolex-2171960.jpg" class="img1"/>
+                <!-- print object is not active -->
+            </div>
+            <div th:case="'watch3'">
+                <img src="https://www.maxpixel.net/static/photo/1x/Luxury-Watch-Class-Watches-Rolex-Watch-Wristwatch-4874320.jpg" class="img1"/>
+            </div>
+            <div th:case="'watch4'">
+                <img src="https://www.maxpixel.net/static/photo/1x/Rolex-Watches-Watch-Luxury-Watch-Wristwatch-Class-4551369.jpg" class="img1"/>
+            </div>
+            <div th:case="'watch5'">
+                <img src="https://www.maxpixel.net/static/photo/1x/Watch-Rolex-Datejust-2654530.jpg" class="img1"/>
+            </div>
+            <div th:case="'watch6'">
+                <img src="https://www.maxpixel.net/static/photo/1x/Luxury-Rolex-Swiss-Dial-Metal-Steel-Time-Watch-2171961.jpg" class="img1"/>
+            </div>
+        </th:block>
+
+
+<!--        <form th:action="@{/watchdetail}" method="get">-->
+<!--            <input type="hidden" name="id" value="1" >-->
+<!--            <button type="submit" class="button button2"/>Shop now</button>-->
+<!--        </form>-->
+    </section>
+    <section>
+       <h4><i><td th:text="${product.description}">Description</td></i></h4>
         <!--    <a href="#" class="btn blue">Blue Button</a>-->
     </section>
     <section>
@@ -299,31 +340,37 @@
         <br>
         <br>
         <br>
+        <!--    <a href="#" class="btn blue">Blue Button</a>-->
+    </section>
+    <section>
+        <div class = "col-md-6 col-md-offset-3">
+            <div class="form-q">
+                <label for="amount">Quantity</label>
+                <br>
+                <br>
+                <input type="amount" id="amount" name="amount" class="form-control" placeholder="Enter number of Items" />
+            </div>
+            <br>
+            <br>
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-sm-6 col-sm-offset-3">
+                        <input type="submit" name="btn btn-success"
+                               class="form-control btn btn-primary" value="Add to cart" />
+                    </div>
+                </div>
+            </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <!--    <a href="#" class="btn blue">Blue Button</a>-->
     </section>
-</div>
-<div>
-    <div class = "row">
-        <div class = "col-md-6 col-md-offset-3">
-            <div class="form-group">
-                <label for="amount">Quantity</label>: <input type="amount"
-                                                   id="amount" name="amount" class="form-control"
-                                                   placeholder="Enter number of Items" />
-            </div>
-
-
-        <div class="form-group">
-            <div class="row">
-              <div class="col-sm-6 col-sm-offset-3">
-                <input type="submit" name="btn btn-success"
-                   class="form-control btn btn-primary" value="Add to cart" />
-             </div>
-             </div>
-        </div>
-        </div>
-    </div>
 </div>
 </form>
 </body>
