--- a/src/main/resources/templates/purchase.html
+++ b/src/main/resources/templates/purchase.html
@@ -493,7 +493,7 @@
 
     <div class="heading cf">
         <h1>My Cart</h1>
-        <a href="/items" class="continue">Continue Shopping</a>
+        <a href="/products" class="continue">Continue Shopping</a>
 
     </div>
     <div th:if="${shoppingCart.wallet<0}">
