--- a/src/main/resources/templates/check.html
+++ b/src/main/resources/templates/check.html
@@ -500,7 +500,7 @@
 
     <div class="heading cf">
         <h1>My Cart</h1>
-        <a href="/items" class="continue">Continue Shopping</a>
+        <a href="/products" class="continue">Continue Shopping</a>
 
     </div>
     <div class="cart">
