--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -42,10 +42,11 @@
         }
 
         .img1 {
-            max-width: 40%;
+            max-width: 48%;
             margin-left: 12%;
             margin-top: -5%;
             float: left;
+            margin-bottom: 30px;
         }
         .img2 {
             max-width: 50%;
@@ -141,7 +142,8 @@
             margin: 4px 2px;
             cursor: pointer;
             margin-left: 12%;
-            margin-top: 19%;
+            margin-top: 30%;
+
         }
 
         .button2 {padding: 12px 23px;}
@@ -328,6 +330,7 @@
                     class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
+            <a class="navbar-brand" href="#" th:href="@{/products}">Shop</a>
             <a class="navbar-brand" href="#" th:href="@{/login}">Login</a>
             <a class="navbar-brand" href="#" th:href="@{/users}">Users</a>
             <a class="navbar-brand" href="#" th:href="@{/user_page}">Get info</a>
@@ -344,6 +347,10 @@
 <!--    <h1> <td th:text="${product.photos_image_path}">Name</h1>-->
 <!--    <img th:src="@{product.photos_image_path}"/>-->
         <img src="https://wallpaperaccess.com/full/810163.jpg"  class="img1" />
+    <br>
+    <br>
+    <br>
+    <br>
     <br>
     <br>
     <br>
