--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -278,7 +278,9 @@
                     class="icon-bar"></span> <span class="icon-bar"></span> <span
                     class="icon-bar"></span>
             </button>
+            <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
             <a class="navbar-brand" href="#" th:href="@{/login}">Login</a>
+            <a class="navbar-brand" href="#" th:href="@{/products}">Shop</a>
             <a class="navbar-brand" href="#" th:href="@{/register}">Register</a>
             <a class="navbar-brand" href="#" th:href="@{/users}">Users</a>
             <a class="navbar-brand" href="#" th:href="@{/user_page}">Get info</a>
