--- a/src/main/resources/templates/transfer_money.html
+++ b/src/main/resources/templates/transfer_money.html
@@ -43,6 +43,7 @@
             </button>
             <a class="navbar-brand" href="#" th:href="@{/}">Home Page
             </a>
+            <a class="navbar-brand" href="#" th:href="@{/products}">Shop</a>
         </div>
     </div>
 </nav>
