--- a/src/main/resources/templates/watch_detail.html
+++ b/src/main/resources/templates/watch_detail.html
@@ -298,22 +298,22 @@
     <br>
     <section>
         <th:block th:switch="${product.product_name}">
-            <div th:case="'watch1'">
+            <div th:case="'Watch1'">
                 <img src="https://www.maxpixel.net/static/photo/1x/Wristwatch-Rolex-Watches-Watch-Luxury-Watch-Class-4696644.jpg" class="img1"/>
             </div>
-            <div th:case="'watch2'">
+            <div th:case="'Watch2'">
                 <img src="https://www.maxpixel.net/static/photo/1x/Steel-Metal-Watch-Dial-Time-Swiss-Luxury-Rolex-2171960.jpg" class="img1"/>
             </div>
-            <div th:case="'watch3'">
+            <div th:case="'Watch3'">
                 <img src="https://www.maxpixel.net/static/photo/1x/Luxury-Watch-Class-Watches-Rolex-Watch-Wristwatch-4874320.jpg" class="img1"/>
             </div>
-            <div th:case="'watch4'">
+            <div th:case="'Watch4'">
                 <img src="https://www.maxpixel.net/static/photo/1x/Rolex-Watches-Watch-Luxury-Watch-Wristwatch-Class-4551369.jpg" class="img1"/>
             </div>
-            <div th:case="'watch5'">
+            <div th:case="'Watch5'">
                 <img src="https://www.maxpixel.net/static/photo/1x/Watch-Rolex-Datejust-2654530.jpg" class="img1"/>
             </div>
-            <div th:case="'watch6'">
+            <div th:case="'Watch6'">
                 <img src="https://www.maxpixel.net/static/photo/1x/Luxury-Rolex-Swiss-Dial-Metal-Steel-Time-Watch-2171961.jpg" class="img1"/>
             </div>
         </th:block>
@@ -352,23 +352,23 @@
                 <div class="row">
                     <div class="col-sm-6 col-sm-offset-3">
                         <th:block th:switch="${product.product_name}">
-                            <div th:case="'watch1'">
+                            <div th:case="'Watch1'">
                                 <input type="hidden" name="price" value="1000">
                             </div>
-                            <div th:case="'watch2'">
-                                <input type="hidden" name="price" value="7000">
+                            <div th:case="'Watch2'">
+                                <input type="hidden" name="price" value="1000">
                             </div>
-                            <div th:case="'watch3'">
-                                <input type="hidden" name="price" value="6500">
+                            <div th:case="'Watch3'">
+                                <input type="hidden" name="price" value="1000">
                             </div>
-                            <div th:case="'watch4'">
-                                <input type="hidden" name="price" value="7500">
+                            <div th:case="'Watch4'">
+                                <input type="hidden" name="price" value="1000">
                             </div>
-                            <div th:case="'watch5'">
-                                <input type="hidden" name="price" value="4000">
+                            <div th:case="'Watch5'">
+                                <input type="hidden" name="price" value="1000">
                             </div>
-                            <div th:case="'watch6'">
-                                <input type="hidden" name="price" value="4500">
+                            <div th:case="'Watch6'">
+                                <input type="hidden" name="price" value="1000">
                             </div>
                         </th:block>
                         <input type="hidden" name="product_name" th:value=${product.product_name}>
