--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -333,7 +333,7 @@
             <a class="navbar-brand" href="#" th:href="@{/products}">Shop</a>
             <a class="navbar-brand" href="#" th:href="@{/login}">Login</a>
             <a class="navbar-brand" href="#" th:href="@{/users}">Users</a>
-            <a class="navbar-brand" href="#" th:href="@{/user_page}">Get info</a>
+            <a class="navbar-brand" href="#" th:href="@{/userpage}">Get info</a>
             <a class="navbar-brand" href="#" th:href="@{/logout}">Log out</a>
         </div>
     </div>
@@ -344,8 +344,6 @@
 <b><h1>Watches for You</h1></b>
 <form th:action="@{/homepage}" method="get">
     <h4>High-precision watches that connect people.</h4>
-<!--    <h1> <td th:text="${product.photos_image_path}">Name</h1>-->
-<!--    <img th:src="@{product.photos_image_path}"/>-->
         <img src="https://wallpaperaccess.com/full/810163.jpg"  class="img1" />
     <br>
     <br>
