--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -133,7 +133,7 @@
 	<tbody>
 	<tr th:each="user: ${listUsers}">
 		<td th:text="${user.id}">User ID </td>
-		<td th:utext="${user.email}">E-mail</td>
+		<td th:text="${user.email}">E-mail</td>
 		<td th:utext="${user.username}">Username</td>
 		<td th:text="${user.active}">Active user</td>
 		</td>
